# quantum

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: ecs.hpp  utils.hpp
scripts/: build (windows).bat  build.bat  build.sh
src/: ecs.cpp  main.cpp
tests/: main_test.cpp
